Creating application unit tests.